NEW ROUTES 	modified:   bun.lock 	modified:   docs/swagger.json 	modified:   package.json 	modified:   prisma/schema.prisma 	modified:   src/admin/admin.repository.ts 	modified:   src/admin/admin.service.ts 	modified:   src/admin/mentor/admin.mentor.controller.ts 	new file:   src/default/default.controller.ts 	new file:   src/default/default.repository.ts 	new file:   src/default/default.service.ts 	modified:   src/index.ts 	modified:   src/middleware/index.ts 	modified:   src/user/user.controller.ts 	modified:   src/user/user.repository.ts 	modified:   src/utils/prisma.ts
