# src/index.ts
@@ -5,11 +5,13 @@ import { adminRouter } from "./admin/admin.controller";
 import { middleware_admin, middleware_allrole, middleware_mentor } from "./middleware";
 import { Router as UserController } from "./user/user.controller";
 import { Router as MentorController } from "./mentor/mentor.controller";
+import { Router as DefaultRouter } from "./default/default.controller";
 import cors from "cors"
 
 import jsonSwager from "../docs/swagger.json";
 import { swagger_static } from "../docs/swagger.static";
 import { homepage } from "./utils/hompage.status";
+import {logger} from "./utils/prisma";
 
 const app = express();
 const app_port = process.env.APP_PORT || 3000
@@ -31,10 +33,9 @@ app.use("/auth", AuthController)
 app.use("/user", middleware_allrole, UserController)
 app.use("/admin", middleware_admin, adminRouter)
 app.use("/mentor", middleware_mentor, MentorController)
-
-
+app.use("/default",middleware_allrole,DefaultRouter)  
 app.listen(app_port, () => {
-    console.log("Apps run port :", app_port)
+    logger.info("running on port " + app_port)
 })
 
 export default app
